完善b站界面和功能匹配

--- a/config/logging.ini
+++ b/config/logging.ini
@@ -13,7 +13,7 @@ level=NOTSET
 handlers=rootHandler
 
 [logger_AllLogger]
-level=DEBUG
+level=INFO
 handlers=fileHandler,consoleHandler,qTextBrowserHandler
 qualname=AllLogger
 propagate=1
