--- a/config/logging.ini
+++ b/config/logging.ini
@@ -13,7 +13,7 @@ level=NOTSET
 handlers=rootHandler
 
 [logger_AllLogger]
-level=INFO
+level=DEBUG
 handlers=fileHandler,consoleHandler,qTextBrowserHandler
 qualname=AllLogger
 propagate=1
