新增并初步完善B站爬虫，bug及新增后续优化

--- a/config/logging.ini
+++ b/config/logging.ini
@@ -1,20 +1,20 @@
 [loggers]
-keys=root,CAndFLogger,consoleLogger,fileLogger
+keys=root,AllLogger,consoleLogger,fileLogger
 
 [handlers]
-keys=rootHandler,consoleHandler,fileHandler
+keys=rootHandler,consoleHandler,fileHandler,qTextBrowserHandler
 
 [formatters]
-keys=standardFormatter
+keys=standardFormatter,qTextBrowserFormatter
 
 [logger_root]
 level=NOTSET
 handlers=rootHandler
 
-[logger_CAndFLogger]
+[logger_AllLogger]
 level=DEBUG
-handlers=fileHandler,consoleHandler
-qualname=CAndFLogger
+handlers=fileHandler,consoleHandler,qTextBrowserHandler
+qualname=AllLogger
 propagate=1
 
 [logger_consoleLogger]
@@ -28,6 +28,12 @@ level=DEBUG
 handlers=fileHandler
 qualname=fileLogger
 propagate=1
+;
+;[logger_qTextBrowserLogger]
+;level=DEBUG
+;handlers=qTextBrowserHandler
+;qualname=qTextBrowserLogger
+;propagate=1
 
 [handler_rootHandler]
 class=FileHandler
@@ -47,6 +53,16 @@ level=NOTSET
 formatter=standardFormatter
 args=('logs/logging.log','a')
 
+[handler_qTextBrowserHandler]
+class=utils.log.custom_handlers.QTextBrowserHandler
+level=NOTSET
+formatter=qTextBrowserFormatter
+args=()
+
 [formatter_standardFormatter]
 format=%(asctime)s - %(name)s - (%(process)d:%(threadName)s:%(thread)d) - (%(pathname)s:%(funcName)s:%(lineno)d) - %(levelname)s - %(message)s
+datefmt=%Y-%m-%d %H:%M:%S
+
+[formatter_qTextBrowserFormatter]
+format=%(asctime)s - %(name)s - %(message)s
 datefmt=%Y-%m-%d %H:%M:%S
